--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "framework": "vite",
     "rewrites": [
         {
             "source": "/api/(.*)",
@@ -8,10 +11,5 @@
             "source": "/(.*)",
             "destination": "/index.html"
         }
-    ],
-    "functions": {
-        "api/**/*.js": {
-            "runtime": "nodejs20.x"
-        }
-    }
+    ]
 }
